[package]
name = 'joystream-node'
authors = ['Anonymous']
description = 'A new Cumulus FRAME-based Substrate node, ready for hacking.'
license = 'Unlicense'
version = '3.0.0'
homepage = 'https://substrate.dev'
repository = 'https://github.com/substrate-developer-hub/substrate-parachain-template'
edition = '2018'
build = 'build.rs'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[[bin]]
name = 'joystream-node'
path = 'bin/main.rs'

[dependencies]
derive_more = '0.15.0'
log = "0.4.13"
codec = { package = 'parity-scale-codec', version = '2.1.3', default-features = false, features = ['derive']}
hex-literal = "0.2.1"

# RPC related dependencies
jsonrpc-core = "15.1.0"
serde = { version = "1.0.126", features = ["derive"] }
futures = { version = "0.3.15", features = ["compat"] }
structopt = "0.3.21"
serde_json = '1.0'
hex = { package = "hex", version = "0.4.3" }

# Local Dependencies
joystream-node-runtime = { path = '../runtime' }

# Substrate Dependencies
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
frame-benchmarking-cli = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }

pallet-transaction-payment-rpc = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }

substrate-frame-rpc-system = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.6" }

## Substrate Client Dependencies
sc-basic-authorship = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
sc-chain-spec = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
sc-cli = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
sc-client-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
sc-consensus = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
sc-consensus-aura = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
sc-consensus-babe = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
sc-consensus-babe-rpc = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
sc-consensus-epochs = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
sc-consensus-slots = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
sc-finality-grandpa = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
sc-finality-grandpa-rpc = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
sc-authority-discovery = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
sc-executor = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
sc-network = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
sc-keystore = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
sc-rpc = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
sc-rpc-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
sc-service = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.6", features = ['wasmtime'] }
sc-telemetry = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
sc-transaction-pool = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
sc-tracing = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
sp-authority-discovery = {git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }

## Substrate Primitive Dependencies
sp-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
sp-block-builder = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
sp-blockchain = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
sp-consensus = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
sp-consensus-babe = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
sp-inherents = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
sp-keystore = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
sp-offchain = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
sp-session = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
sp-timestamp = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.6' }

# Cumulus dependencies
cumulus-client-consensus-aura = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.6' }
cumulus-client-consensus-common = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.6' }
cumulus-client-collator = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.6' }
cumulus-client-cli = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.6' }
cumulus-client-network = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.6' }
cumulus-client-service = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.6' }
cumulus-primitives-core = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.6' }
cumulus-primitives-parachain-inherent = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.6' }

# Polkadot dependencies
polkadot-primitives = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.6' }
polkadot-service = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.6' }
polkadot-cli = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.6' }
polkadot-test-service = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.6' }
polkadot-parachain = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.6' }

# CLI-specific dependencies
node-inspect = { package = 'node-inspect', git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.6', optional = true }

# WASM-specific dependencies
wasm-bindgen = { version = "0.2.74", optional = true }
wasm-bindgen-futures = { version = "0.4.24", optional = true }
browser-utils = { package = 'substrate-browser-utils', git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.6', optional = true}

[build-dependencies]
structopt = { version = "0.3.21", optional = true }
node-inspect = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.6', optional = true}
sc-cli = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.6', optional = true}
frame-benchmarking-cli = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.6', optional = true }
substrate-build-script-utils = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.6', optional = true }

[features]
default = [
	"node-inspect",
	"sc-cli",
	"frame-benchmarking-cli",
	"sc-service/db",
	"structopt",
	"substrate-build-script-utils",
]
standalone = ["joystream-node-runtime/standalone"]
browser = [
	"browser-utils",
	"wasm-bindgen",
	"wasm-bindgen-futures",
]
runtime-benchmarks = [
	"joystream-node-runtime/runtime-benchmarks",
	"frame-benchmarking-cli",
]