[package]
authors = ['Joystream contributors']
edition = '2018'
name = 'joystream-node-runtime'
# Follow convention: https://github.com/Joystream/substrate-runtime-joystream/issues/1
# {Authoring}.{Spec}.{Impl} of the RuntimeVersion
version = '12.3000.0'

[dependencies]
# Third-party dependencies
serde = { version = "1.0.101", optional = true, features = ["derive"] }
lazy_static = {version = "1.4.0", features = ["spin_no_std"] }
getrandom = { version = "0.2", default-features = false,  features = ["js"] }
lite-json = { version = '0.1.3', default-features = false}
codec = { package = 'parity-scale-codec', version = '3.1.2', default-features = false, features = ['derive'] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
smallvec = "1.6.0"
log = { version = "0.4.17", default-features = false }
static_assertions = "1.1.0"
impl-serde = { version = "=0.3.1", optional = true }

# Substrate primitives
sp-std = { package = 'sp-std', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e'}
sp-arithmetic = { package = 'sp-arithmetic', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e'}
sp-runtime = { package = 'sp-runtime', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e'}
sp-offchain = { package = 'sp-offchain', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e'}
sp-core = { package = 'sp-core', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e'}
sp-authority-discovery = { package = 'sp-authority-discovery', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e'}
sp-consensus-babe = { package = 'sp-consensus-babe', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e'}
sp-transaction-pool = { package = 'sp-transaction-pool', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e'}
sp-session = { package = 'sp-session', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e'}
sp-block-builder = { package = 'sp-block-builder', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e'}
sp-api = { package = 'sp-api', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e'}
sp-version = { package = 'sp-version', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e'}
sp-staking = { package = 'sp-staking', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e'}
sp-application-crypto = { package = 'sp-application-crypto', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e'}
sp-io = { package = 'sp-io', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e'}
sp-weights = { package = 'sp-weights', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e'}

# Frame
frame-support = { package = 'frame-support', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e'}
frame-executive = { package = 'frame-executive', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e'}
frame-system-rpc-runtime-api = { package = 'frame-system-rpc-runtime-api', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e'}
frame-system = { package = 'frame-system', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e'}
frame-election-provider-support = { package = 'frame-election-provider-support', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e'}
pallet-election-provider-multi-phase = { package = 'pallet-election-provider-multi-phase', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e' }
pallet-bags-list = { package = 'pallet-bags-list', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e'}
frame-try-runtime = { package = 'frame-try-runtime', default-features = false, optional = true, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e'}

# Pallets
pallet-grandpa = { package = 'pallet-grandpa', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e'}
pallet-staking-reward-curve = { package = 'pallet-staking-reward-curve', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e'}
pallet-babe = { package = 'pallet-babe', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e'}
pallet-transaction-payment = { package = 'pallet-transaction-payment', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e'}
pallet-transaction-payment-rpc-runtime-api = { package = 'pallet-transaction-payment-rpc-runtime-api', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e'}
pallet-authorship = { package = 'pallet-authorship', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e'}
pallet-session = { package = 'pallet-session', features = [ "historical" ], default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e'}
pallet-offences = { package = 'pallet-offences', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e'}
pallet-insecure-randomness-collective-flip = { package = 'pallet-insecure-randomness-collective-flip', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e'}
pallet-authority-discovery = { package = 'pallet-authority-discovery', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e'}
pallet-staking = { package = 'pallet-staking', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e'}
pallet-timestamp = { package = 'pallet-timestamp', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e'}
pallet-balances = { package = 'pallet-balances', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e'}
pallet-im-online = { package = 'pallet-im-online', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e'}
substrate-utility = { package = 'pallet-utility', version = "4.0.0-dev", default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e'}
pallet-vesting = { package = 'pallet-vesting', default-features = false, git = 'https://github.com/joystream/substrate', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e' }
pallet-multisig = { package = 'pallet-multisig', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e'}

# Benchmarking
frame-benchmarking = { git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e', default-features = false, optional = true }
frame-system-benchmarking = { git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e', default-features = false, optional = true }
pallet-offences-benchmarking = { git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e', default-features = false, optional = true }
pallet-session-benchmarking = { git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e', default-features = false, optional = true }
hex-literal = { optional = true, version = '0.3.1' }
pallet-election-provider-support-benchmarking = { package = 'pallet-election-provider-support-benchmarking', default-features = false, optional = true, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e' }

# Joystream
common = { package = 'pallet-common', default-features = false, path = '../runtime-modules/common'}
forum = { package = 'pallet-forum', default-features = false, path = '../runtime-modules/forum'}
membership = { package = 'pallet-membership', default-features = false, path = '../runtime-modules/membership'}
referendum = { package = 'pallet-referendum', default-features = false, path = '../runtime-modules/referendum'}
council = { package = 'pallet-council', default-features = false, path = '../runtime-modules/council'}
working-group = { package = 'pallet-working-group', default-features = false, path = '../runtime-modules/working-group'}
storage = { package = 'pallet-storage', default-features = false, path = '../runtime-modules/storage'}
proposals-engine = { package = 'pallet-proposals-engine', default-features = false, path = '../runtime-modules/proposals/engine'}
proposals-discussion = { package = 'pallet-proposals-discussion', default-features = false, path = '../runtime-modules/proposals/discussion'}
proposals-codex = { package = 'pallet-proposals-codex', default-features = false, path = '../runtime-modules/proposals/codex'}
pallet-constitution = { package = 'pallet-constitution', default-features = false, path = '../runtime-modules/constitution' }
staking-handler = { package = 'pallet-staking-handler', default-features = false, path = '../runtime-modules/staking-handler'}
bounty = { package = 'pallet-bounty', default-features = false, path = '../runtime-modules/bounty'}
content = { package = 'pallet-content', default-features = false, path = '../runtime-modules/content'}
joystream-utility = { package = 'pallet-utility', default-features = false, path = '../runtime-modules/utility'}
project-token = { package = 'pallet-project-token', default-features = false, path = '../runtime-modules/project-token'}

[dev-dependencies]
sp-io = { package = 'sp-io', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e'}
strum = {version = "0.19", default-features = false}

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/joystream/substrate", rev = '50cf239147a6f569e563bcadec6c7a1c5ad5c67e' }

[features]
default = ['std']
std = [
    # Third-party dependencies
    'serde',
    'codec/std',
    'scale-info/std',
    'impl-serde/std',

    # Substrate primitives
    'sp-std/std',
    'sp-core/std',
    'sp-weights/std',
    'sp-api/std',
    'sp-version/std',
    'sp-runtime/std',
    'sp-arithmetic/std',
    'sp-offchain/std',
    'sp-authority-discovery/std',
    'sp-consensus-babe/std',
    'sp-transaction-pool/std',
    'sp-block-builder/std',
    'sp-session/std',
    'sp-staking/std',
    'sp-application-crypto/std',
    'sp-io/std',

    # Frame
    'frame-support/std',
    'frame-executive/std',
    'frame-system-rpc-runtime-api/std',
    'frame-system/std',
    'frame-election-provider-support/std',
    'frame-benchmarking/std',
    'pallet-offences-benchmarking?/std',
    'frame-system-benchmarking?/std',
    'frame-try-runtime/std',

    # Pallets
    'pallet-timestamp/std',
    'pallet-balances/std',
    'pallet-transaction-payment/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-grandpa/std',
    'pallet-babe/std',
    'pallet-session/std',
    'pallet-session-benchmarking?/std',
    'pallet-authority-discovery/std',
    'pallet-authorship/std',
    'pallet-insecure-randomness-collective-flip/std',
    'pallet-staking/std',
    'pallet-im-online/std',
    'pallet-offences/std',
    'pallet-vesting/std',
    'pallet-multisig/std',
    'substrate-utility/std',
    'pallet-bags-list/std',
    'pallet-election-provider-multi-phase/std',
    'pallet-election-provider-support-benchmarking?/std',

    # Joystream
    'common/std',
    'forum/std',
    'membership/std',
    'council/std',
    'referendum/std',
    'working-group/std',
    'storage/std',
    'proposals-engine/std',
    'proposals-discussion/std',
    'proposals-codex/std',
    'pallet-constitution/std',
    'staking-handler/std',
    'bounty/std',
    'joystream-utility/std',
    'content/std',
    'project-token/std',
    'log/std',
]
runtime-benchmarks = [
    "playground-runtime",
    "hex-literal",
    "frame-support/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "frame-benchmarking/runtime-benchmarks",
    "frame-system-benchmarking/runtime-benchmarks",
    "frame-system/runtime-benchmarks",

    # Substrate pallets
    "pallet-offences-benchmarking/runtime-benchmarks",
    "pallet-vesting/runtime-benchmarks",
    "pallet-multisig/runtime-benchmarks",
    "pallet-session-benchmarking/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-im-online/runtime-benchmarks",
    "pallet-staking/runtime-benchmarks",
    "pallet-grandpa/runtime-benchmarks",
    "pallet-babe/runtime-benchmarks",
    "pallet-bags-list/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "substrate-utility/runtime-benchmarks",
    "pallet-election-provider-multi-phase/runtime-benchmarks",
    "pallet-election-provider-support-benchmarking/runtime-benchmarks",

    # Joystream
    "common/runtime-benchmarks",
    "proposals-discussion/runtime-benchmarks",
    "proposals-engine/runtime-benchmarks",
    "proposals-codex/runtime-benchmarks",
    "joystream-utility/runtime-benchmarks",
    "pallet-constitution/runtime-benchmarks",
    "working-group/runtime-benchmarks",
    "forum/runtime-benchmarks",
    "membership/runtime-benchmarks",
    "council/runtime-benchmarks",
    "referendum/runtime-benchmarks",
    "bounty/runtime-benchmarks",
    'storage/runtime-benchmarks',
    'content/runtime-benchmarks',
    "project-token/runtime-benchmarks",
]

# Staging and testing configurations
# configuration suitable for staging networks and playground
staging-runtime = []
playground-runtime = []
# configuration suitable for integration testing
testing-runtime = []

try-runtime = [
    "frame-try-runtime",
    "frame-executive/try-runtime",
    "frame-system/try-runtime",
    "frame-support/try-runtime",
    "pallet-authority-discovery/try-runtime",
    "pallet-authorship/try-runtime",
    "pallet-babe/try-runtime",
    "pallet-bags-list/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-election-provider-multi-phase/try-runtime",
    "pallet-grandpa/try-runtime",
    "pallet-im-online/try-runtime",
    "pallet-multisig/try-runtime",
    "pallet-offences/try-runtime",
    "pallet-insecure-randomness-collective-flip/try-runtime",
    "pallet-session/try-runtime",
    "pallet-staking/try-runtime",
    "pallet-timestamp/try-runtime",
    "pallet-transaction-payment/try-runtime",
    "pallet-vesting/try-runtime",
    "substrate-utility/try-runtime",
    # joystream
    'forum/try-runtime',
    'membership/try-runtime',
    'council/try-runtime',
    'referendum/try-runtime',
    'working-group/try-runtime',
    'storage/try-runtime',
    'proposals-engine/try-runtime',
    'proposals-discussion/try-runtime',
    'proposals-codex/try-runtime',
    'pallet-constitution/try-runtime',
    'bounty/try-runtime',
    'joystream-utility/try-runtime',
    'content/try-runtime',
    'project-token/try-runtime',
]