[package]
authors = ['Joystream contributors']
edition = '2018'
name = 'joystream-node-runtime'
# Follow convention: https://github.com/Joystream/substrate-runtime-joystream/issues/1
# {Authoring}.{Spec}.{Impl} of the RuntimeVersion
version = '12.2002.0'

[dependencies]
# Third-party dependencies
serde = { version = "1.0.101", optional = true, features = ["derive"] }
lazy_static = {version = "1.4.0", features = ["spin_no_std"] }
getrandom = { version = "0.2", default-features = false,  features = ["js"] }
lite-json = { version = '0.1.3', default-features = false}
codec = { package = 'parity-scale-codec', version = '3.1.2', default-features = false, features = ['derive'] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
smallvec = "1.6.0"
log = { version = "0.4.17", default-features = false }
static_assertions = "1.1.0"
impl-serde = { version = "=0.3.1", optional = true }

# Substrate primitives
sp-std = { package = 'sp-std', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438'}
sp-arithmetic = { package = 'sp-arithmetic', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438'}
sp-runtime = { package = 'sp-runtime', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438'}
sp-offchain = { package = 'sp-offchain', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438'}
sp-core = { package = 'sp-core', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438'}
sp-authority-discovery = { package = 'sp-authority-discovery', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438'}
sp-consensus-babe = { package = 'sp-consensus-babe', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438'}
sp-transaction-pool = { package = 'sp-transaction-pool', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438'}
sp-session = { package = 'sp-session', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438'}
sp-block-builder = { package = 'sp-block-builder', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438'}
sp-api = { package = 'sp-api', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438'}
sp-version = { package = 'sp-version', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438'}
sp-staking = { package = 'sp-staking', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438'}
sp-application-crypto = { package = 'sp-application-crypto', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438'}
sp-io = { package = 'sp-io', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438'}
sp-weights = { package = 'sp-weights', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438'}

# Frame
frame-support = { package = 'frame-support', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438'}
frame-executive = { package = 'frame-executive', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438'}
frame-system-rpc-runtime-api = { package = 'frame-system-rpc-runtime-api', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438'}
frame-system = { package = 'frame-system', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438'}
frame-election-provider-support = { package = 'frame-election-provider-support', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438'}
pallet-election-provider-multi-phase = { package = 'pallet-election-provider-multi-phase', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438' }
pallet-bags-list = { package = 'pallet-bags-list', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438'}
frame-try-runtime = { package = 'frame-try-runtime', default-features = false, optional = true, git = 'https://github.com/joystream/substrate.git', rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438'}

# Pallets
pallet-grandpa = { package = 'pallet-grandpa', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438'}
pallet-staking-reward-curve = { package = 'pallet-staking-reward-curve', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438'}
pallet-babe = { package = 'pallet-babe', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438'}
pallet-transaction-payment = { package = 'pallet-transaction-payment', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438'}
pallet-transaction-payment-rpc-runtime-api = { package = 'pallet-transaction-payment-rpc-runtime-api', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438'}
pallet-authorship = { package = 'pallet-authorship', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438'}
pallet-session = { package = 'pallet-session', features = [ "historical" ], default-features = false, git = 'https://github.com/joystream/substrate.git', rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438'}
pallet-offences = { package = 'pallet-offences', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438'}
pallet-insecure-randomness-collective-flip = { package = 'pallet-insecure-randomness-collective-flip', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438'}
pallet-authority-discovery = { package = 'pallet-authority-discovery', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438'}
pallet-staking = { package = 'pallet-staking', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438'}
pallet-timestamp = { package = 'pallet-timestamp', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438'}
pallet-balances = { package = 'pallet-balances', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438'}
pallet-im-online = { package = 'pallet-im-online', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438'}
substrate-utility = { package = 'pallet-utility', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438'}
pallet-vesting = { package = 'pallet-vesting', default-features = false, git = 'https://github.com/joystream/substrate', rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438' }
pallet-multisig = { package = 'pallet-multisig', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438'}
pallet-staking-runtime-api = { package = 'pallet-staking-runtime-api', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438'}

# Benchmarking
frame-benchmarking = { git = 'https://github.com/joystream/substrate.git', rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438', default-features = false, optional = true }
frame-system-benchmarking = { git = 'https://github.com/joystream/substrate.git', rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438', default-features = false, optional = true }
pallet-offences-benchmarking = { git = 'https://github.com/joystream/substrate.git', rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438', default-features = false, optional = true }
pallet-session-benchmarking = { git = 'https://github.com/joystream/substrate.git', rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438', default-features = false, optional = true }
hex-literal = { optional = true, version = '0.3.1' }
pallet-election-provider-support-benchmarking = { package = 'pallet-election-provider-support-benchmarking', default-features = false, optional = true, git = 'https://github.com/joystream/substrate.git', rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438' }

# Joystream
common = { package = 'pallet-common', default-features = false, path = '../runtime-modules/common'}
forum = { package = 'pallet-forum', default-features = false, path = '../runtime-modules/forum'}
membership = { package = 'pallet-membership', default-features = false, path = '../runtime-modules/membership'}
referendum = { package = 'pallet-referendum', default-features = false, path = '../runtime-modules/referendum'}
council = { package = 'pallet-council', default-features = false, path = '../runtime-modules/council'}
working-group = { package = 'pallet-working-group', default-features = false, path = '../runtime-modules/working-group'}
storage = { package = 'pallet-storage', default-features = false, path = '../runtime-modules/storage'}
proposals-engine = { package = 'pallet-proposals-engine', default-features = false, path = '../runtime-modules/proposals/engine'}
proposals-discussion = { package = 'pallet-proposals-discussion', default-features = false, path = '../runtime-modules/proposals/discussion'}
proposals-codex = { package = 'pallet-proposals-codex', default-features = false, path = '../runtime-modules/proposals/codex'}
pallet-constitution = { package = 'pallet-constitution', default-features = false, path = '../runtime-modules/constitution' }
staking-handler = { package = 'pallet-staking-handler', default-features = false, path = '../runtime-modules/staking-handler'}
bounty = { package = 'pallet-bounty', default-features = false, path = '../runtime-modules/bounty'}
content = { package = 'pallet-content', default-features = false, path = '../runtime-modules/content'}
joystream-utility = { package = 'pallet-joystream-utility', default-features = false, path = '../runtime-modules/utility'}
project-token = { package = 'pallet-project-token', default-features = false, path = '../runtime-modules/project-token'}

[dev-dependencies]
sp-io = { package = 'sp-io', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438'}
strum = {version = "0.19", default-features = false}
remote-externalities = { package = "frame-remote-externalities", git = 'https://github.com/joystream/substrate.git', rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438'}
tokio = { version = "1.24.2", features = ["macros"] }
sp-tracing = { package = 'sp-tracing', git = 'https://github.com/joystream/substrate.git', rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438'}

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/joystream/substrate", rev = 'b32efd5dcc829a03ac0dc76b69e39e1c64299438' }

[features]
default = ['std']
std = [
    # Third-party dependencies
    'serde',
    'codec/std',
    'scale-info/std',
    'impl-serde/std',

    # Substrate primitives
    'sp-std/std',
    'sp-core/std',
    'sp-weights/std',
    'sp-api/std',
    'sp-version/std',
    'sp-runtime/std',
    'sp-arithmetic/std',
    'sp-offchain/std',
    'sp-authority-discovery/std',
    'sp-consensus-babe/std',
    'sp-transaction-pool/std',
    'sp-block-builder/std',
    'sp-session/std',
    'sp-staking/std',
    'sp-application-crypto/std',
    'sp-io/std',

    # Frame
    'frame-support/std',
    'frame-executive/std',
    'frame-system-rpc-runtime-api/std',
    'frame-system/std',
    'frame-election-provider-support/std',
    'frame-benchmarking/std',
    'pallet-offences-benchmarking?/std',
    'frame-system-benchmarking?/std',
    'frame-try-runtime/std',

    # Pallets
    'pallet-timestamp/std',
    'pallet-balances/std',
    'pallet-transaction-payment/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-grandpa/std',
    'pallet-babe/std',
    'pallet-session/std',
    'pallet-session-benchmarking?/std',
    'pallet-authority-discovery/std',
    'pallet-authorship/std',
    'pallet-insecure-randomness-collective-flip/std',
    'pallet-staking/std',
    'pallet-im-online/std',
    'pallet-offences/std',
    'pallet-vesting/std',
    'pallet-multisig/std',
    'substrate-utility/std',
    'pallet-bags-list/std',
    'pallet-election-provider-multi-phase/std',
    'pallet-election-provider-support-benchmarking?/std',
    'pallet-staking-runtime-api/std',

    # Joystream
    'common/std',
    'forum/std',
    'membership/std',
    'council/std',
    'referendum/std',
    'working-group/std',
    'storage/std',
    'proposals-engine/std',
    'proposals-discussion/std',
    'proposals-codex/std',
    'pallet-constitution/std',
    'staking-handler/std',
    'bounty/std',
    'joystream-utility/std',
    'content/std',
    'project-token/std',
    'log/std',
]
runtime-benchmarks = [
    "playground-runtime",
    "hex-literal",
    "frame-support/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "frame-benchmarking/runtime-benchmarks",
    "frame-system-benchmarking/runtime-benchmarks",
    "frame-system/runtime-benchmarks",

    # Substrate pallets
    "pallet-offences-benchmarking/runtime-benchmarks",
    "pallet-vesting/runtime-benchmarks",
    "pallet-multisig/runtime-benchmarks",
    "pallet-session-benchmarking/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-im-online/runtime-benchmarks",
    "pallet-staking/runtime-benchmarks",
    "pallet-grandpa/runtime-benchmarks",
    "pallet-babe/runtime-benchmarks",
    "pallet-bags-list/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "substrate-utility/runtime-benchmarks",
    "pallet-election-provider-multi-phase/runtime-benchmarks",
    "pallet-election-provider-support-benchmarking/runtime-benchmarks",

    # Joystream
    "common/runtime-benchmarks",
    "proposals-discussion/runtime-benchmarks",
    "proposals-engine/runtime-benchmarks",
    "proposals-codex/runtime-benchmarks",
    "joystream-utility/runtime-benchmarks",
    "pallet-constitution/runtime-benchmarks",
    "working-group/runtime-benchmarks",
    "forum/runtime-benchmarks",
    "membership/runtime-benchmarks",
    "council/runtime-benchmarks",
    "referendum/runtime-benchmarks",
    "bounty/runtime-benchmarks",
    'storage/runtime-benchmarks',
    'content/runtime-benchmarks',
    "project-token/runtime-benchmarks",
]

# Staging and testing configurations
# configuration suitable for staging networks and playground
staging-runtime = []
playground-runtime = []
# configuration suitable for integration testing
testing-runtime = []

try-runtime = [
    "frame-try-runtime",
    "frame-executive/try-runtime",
    "frame-system/try-runtime",
    "frame-support/try-runtime",
    "pallet-authority-discovery/try-runtime",
    "pallet-authorship/try-runtime",
    "pallet-babe/try-runtime",
    "pallet-bags-list/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-election-provider-multi-phase/try-runtime",
    "pallet-grandpa/try-runtime",
    "pallet-im-online/try-runtime",
    "pallet-multisig/try-runtime",
    "pallet-offences/try-runtime",
    "pallet-insecure-randomness-collective-flip/try-runtime",
    "pallet-session/try-runtime",
    "pallet-staking/try-runtime",
    "pallet-timestamp/try-runtime",
    "pallet-transaction-payment/try-runtime",
    "pallet-vesting/try-runtime",
    "substrate-utility/try-runtime",
    # joystream
    'forum/try-runtime',
    'membership/try-runtime',
    'council/try-runtime',
    'referendum/try-runtime',
    'working-group/try-runtime',
    'storage/try-runtime',
    'proposals-engine/try-runtime',
    'proposals-discussion/try-runtime',
    'proposals-codex/try-runtime',
    'pallet-constitution/try-runtime',
    'bounty/try-runtime',
    'joystream-utility/try-runtime',
    'content/try-runtime',
    'project-token/try-runtime',
]